--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -5,3 +5,7 @@
 @forward "idcta";
 @forward "section-header";
 @forward "skill-orbit";
+@forward "pitem";
+@forward "cats";
+@forward "tech-pill";
+@forward "exlink";
