--- a/sass/components/_section-header.scss
+++ b/sass/components/_section-header.scss
@@ -8,4 +8,7 @@
   font-family: $font-secondary;
   text-align: center;
   letter-spacing: 4px;
+
+  // choosing to add margin-bottom here
+  margin-bottom: 45px;
 }
