--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -1,3 +1,7 @@
 @forward "../abstracts";
+@forward "page";
+@forward "container";
 @forward "header";
 @forward "main";
+@forward "skills";
+@forward "portfolio";
