--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,7 @@
 /* -------------------------------------------------------------------------- */
 /*                                 Theme Path                                 */
 /* -------------------------------------------------------------------------- */
-$path: "/wp-content/themes/movement";
-$root: $path;
+$root: "/wp-content/themes/julian2025";
 
 /* -------------------------------------------------------------------------- */
 /*                                 Font Family                                */
@@ -35,6 +34,7 @@ $font-size-100: var(--wp--preset--font-size--gargantuan);
 /* -------------------------------------------------------------------------- */
 /*                                   Colors                                   */
 /* -------------------------------------------------------------------------- */
+$light-blue: #8699aa;
 // $color-accent: #007fbd;
 // $color-primary: #232731;
 // $color-primary-dark: #1c1f27;
