--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,6 +1,9 @@
+@use "../abstracts" as *;
+
 .main {
   position: relative;
   padding-top: 125px;
+  z-index: 0;
 }
 
 .main-splat {
@@ -8,20 +11,44 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 500px;
   pointer-events: none;
   z-index: -1;
+  overflow: hidden;
+
+  &::before {
+    content: "";
+    position: relative;
+    width: 100%;
+    height: 0;
+    display: block;
+    background-color: #232429;
+
+    @include max(700px) {
+      height: 20vh;
+    }
+
+    @include max($mobile) {
+      height: 35vh;
+    }
+  }
 
   &__image {
     position: relative;
     // clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-
-    transition: clip-path 0.15s linear;
-    // top: -200px;
-
+    // top: -600px; // TODO: find a vw based solution
+    // top: -2vw;
     display: flex;
     width: 100%;
-    // clip-path: polygon(0% 0%, 1% 22%, 18% 14%, 33% 22%, 59% 9%, 73% 17%, 87% 10%, 100% 0);
+    top: clamp(-600px, -20vw, -200px);
+
+    @include max(768px) {
+      top: 0;
+      width: 150%;
+    }
+
+    @include max($mobile) {
+      width: 200%;
+    }
 
     &--show {
       // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
