Add portfolio and work history section with responsive splat

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -35,6 +35,7 @@ $font-size-100: var(--wp--preset--font-size--gargantuan);
 /*                                   Colors                                   */
 /* -------------------------------------------------------------------------- */
 $light-blue: #8699aa;
+$navy-blue: #232429;
 // $color-accent: #007fbd;
 // $color-primary: #232731;
 // $color-primary-dark: #1c1f27;
