--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,5 @@
+@use "./variables" as *;
+
 @mixin min($size) {
   @media screen and (min-width: $size) {
     @content;
@@ -47,4 +49,78 @@
   padding: 0;
   border: none;
   font-size: 16px;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                                    Text                                    */
+/* -------------------------------------------------------------------------- */
+@mixin wsywig($theme: light) {
+  color: if($theme == light, rgba(255, 255, 255, 0.8), #000);
+  line-height: 1.4;
+
+  p {
+    margin-bottom: 20px;
+    font-size: 18px;
+
+    @include max($mobile) {
+      font-size: 16px;
+    }
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: #fff;
+    margin-bottom: 10px;
+    line-height: 1.2;
+  }
+
+  a {
+    color: $light-blue;
+    text-decoration: underline;
+
+    &:hover {
+      color: darken($light-blue, 10%);
+    }
+  }
+
+  // blockquote {
+  //   border-left: 4px solid $light-blue;
+  //   padding-left: 15px;
+  //   margin-left: 0;
+  //   color: $light-grey;
+  //   font-style: italic;
+  // }
+
+  ul,
+  ol {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    // list-style: disc;
+
+    li {
+      margin-bottom: 10px;
+      font-size: 18px;
+
+      @include max($mobile) {
+        font-size: 16px;
+      }
+    }
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  strong {
+    font-weight: 700;
+  }
+
+  em {
+    font-style: italic;
+  }
 }
