--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,61 +1,83 @@
 @use "../abstracts" as *;
 
 .main {
-  position: relative;
-  padding-top: 125px;
-  z-index: 0;
+  // position: relative;
+  // z-index: 0;
 }
 
-.main-splat {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  pointer-events: none;
-  z-index: -1;
-  overflow: hidden;
+.main-splat-container {
+  padding-top: 125px;
+  position: relative;
+  z-index: 0;
 
   &::before {
     content: "";
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    height: 0;
-    display: block;
-    background-color: #232429;
-
-    @include max(700px) {
-      height: 20vh;
-    }
-
-    @include max($mobile) {
-      height: 35vh;
-    }
-  }
-
-  &__image {
-    position: relative;
-    // clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-    // top: -600px; // TODO: find a vw based solution
-    // top: -2vw;
-    display: flex;
-    width: 100%;
-    top: clamp(-600px, -20vw, -200px);
-
-    @include max(768px) {
-      top: 0;
-      width: 150%;
-    }
-
-    @include max($mobile) {
-      width: 200%;
-    }
-
-    &--show {
-      // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-
-      // opacity: 1;
-    }
-
-    // opacity: 0;
+    height: 50%;
+    // min-height: 1500px;
+    max-height: 100%;
+    background-image: url($root + "/assets/images/main-splat.svg");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    z-index: -1;
   }
 }
+
+// .main-splat {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   pointer-events: none;
+//   z-index: -1;
+//   overflow: hidden;
+
+//   &::before {
+//     content: "";
+//     position: relative;
+//     width: 100%;
+//     height: 0;
+//     display: block;
+//     background-color: #232429;
+
+//     @include max(700px) {
+//       height: 20vh;
+//     }
+
+//     @include max($mobile) {
+//       height: 35vh;
+//     }
+//   }
+
+//   &__image {
+//     position: relative;
+//     // clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+//     // top: -600px; // TODO: find a vw based solution
+//     // top: -2vw;
+//     display: flex;
+//     width: 100%;
+//     // top: clamp(-600px, -50vw, -10px);
+
+//     @include max(768px) {
+//       top: 0;
+//       width: 150%;
+//     }
+
+//     @include max($mobile) {
+//       width: 200%;
+//     }
+
+//     &--show {
+//       // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+
+//       // opacity: 1;
+//     }
+
+//     // opacity: 0;
+//   }
+// }
