--- a/sass/layout/_page.scss
+++ b/sass/layout/_page.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as *;
 
 .page {
-  background-color: $light-blue;
+  // background-color: $light-blue;
+  background-color: $navy-blue;
   // overflow: hidden;
 }
