--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -5,15 +5,16 @@
   appearance: none;
   border: none;
   background-color: transparent;
+  text-decoration: none;
 
   border-radius: $border-radius;
   box-shadow: inset 0 0 0 1px #fff;
   text-transform: uppercase;
-  line-height: 1;
+  line-height: 1.1;
 
   letter-spacing: 2px;
   color: #fff;
-  padding: 12px 10px;
+  padding: 14px 10px 12px 10px;
   font-family: $font-secondary;
   font-weight: 500;
   font-size: 10px;
