--- a/sass/components/_pitem.scss
+++ b/sass/components/_pitem.scss
@@ -25,6 +25,10 @@ $pitem_breakpoint_3: 575px;
   position: relative;
   border: 1px solid rgba(255, 255, 255, 0.6);
 
+  @include max($pitem_breakpoint_3) {
+    padding: 35px 30px;
+  }
+
   // create keyframes to rotate the border gradient
   @keyframes rotate-border {
     0% {
@@ -45,6 +49,11 @@ $pitem_breakpoint_3: 575px;
   }
 
   &__link-wrapper {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+
     // extend link over entire item
     &::before {
       content: "";
@@ -60,6 +69,9 @@ $pitem_breakpoint_3: 575px;
     // max-width: 375px;
     margin: 0 auto;
     text-align: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
   }
 
   &__heading {
@@ -71,7 +83,7 @@ $pitem_breakpoint_3: 575px;
     display: block;
     margin: 0 auto 30px auto;
     max-width: 200px;
-    max-height: 100%;
+    height: 50px;
     object-fit: contain;
   }
 
@@ -83,6 +95,7 @@ $pitem_breakpoint_3: 575px;
   &__title {
     font-family: $font-secondary;
     font-size: 36px;
+    line-height: 1.2;
     color: #fff;
     font-weight: 600;
     margin-bottom: 20px;
@@ -93,10 +106,11 @@ $pitem_breakpoint_3: 575px;
     font-size: 16px;
     color: #fff;
     line-height: 1.5;
+    margin-bottom: 35px;
   }
 
   &__tech-pills {
-    margin-top: 35px;
+    margin-top: auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 12px;
@@ -134,6 +148,12 @@ $pitem_breakpoint_3: 575px;
       -webkit-mask-composite: xor;
       animation: rotate-border 60s linear infinite;
       z-index: -1;
+    }
+
+    #{$self}__cats {
+      @include max($pitem_breakpoint_3) {
+        justify-content: center;
+      }
     }
 
     #{$self}__content {
