--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,7 +1,18 @@
+@use "../abstracts" as *;
+
 .container {
   max-width: 1260px;
   padding-left: 30px;
   padding-right: 30px;
   margin-left: auto;
   margin-right: auto;
+
+  @include max($mobile) {
+    padding-left: 18px;
+    padding-right: 18px;
+  }
+
+  &--size--lg {
+    max-width: 1400px;
+  }
 }
