--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -6,3 +6,6 @@
 @forward "skills";
 @forward "portfolio";
 @forward "work";
+@forward "funny-section";
+@forward "about-section";
+@forward "playful-half";
