--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -6,6 +6,7 @@
 }
 
 .main-splat-container {
+  background-color: $light-blue;
   padding-top: 125px;
   position: relative;
   z-index: 0;
@@ -17,11 +18,11 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 50%;
+    height: 100%;
     // min-height: 1500px;
     max-height: 100%;
     background-image: url($root + "/assets/images/main-splat.svg");
-    background-size: cover;
+    background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
     z-index: -1;
