--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -3,25 +3,44 @@
 .work-section {
   position: relative;
   background-color: $navy-blue;
-  padding-top: 100px;
+  // padding-top: 100px;
   z-index: 0;
-  background-image: url($root + "/assets/images/light-blue-splat.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
+  // background-image: url($root + "/assets/images/light-blue-splat.svg");
+  // background-size: contain;
+  // background-repeat: repeat-x;
+  overflow: hidden;
+  padding-top: 5vh;
+  // padding-bottom: 20vh;
 
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   right: 0;
-  //   width: 100%;
-  //   height: 800px;
-  //   background-image: url($root + "/assets/images/light-blue-splat.svg");
-  //   background-size: cover;
-  //   background-position: bottom;
-  //   z-index: -1;
-  // }
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -2px;
+    width: 100%;
+    height: 100%;
+    background-image: url($root + "/assets/images/light-blue-splat.svg");
+    background-size: contain;
+    background-position: top;
+    background-repeat: repeat-x;
+    z-index: -1;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 100%;
+    background-image: url($root + "/assets/images/teal-splat-up.svg");
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: repeat-x;
+    z-index: -1;
+  }
 
   &__section-header {
     margin-bottom: 100px;
