Add unique classes to the skill list items to allow specific targeting

--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -12,6 +12,12 @@
 
   &__item {
     text-align: center;
+
+    &--name--php {
+      img {
+        max-width: 78px;
+      }
+    }
   }
 
   &__name {
